Update 'e82sfzc3f-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1cb562e351.chs8.p3.openshiftapps.com/rhtap/rhtap-qe:850c515cefd930f93a75566bccb247868ba05613@sha256:2a4de1a8eb84d1b320e80198a41cbb36317b9967613a75431439ca23eeaa77a4

--- a/components/e82sfzc3f-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/e82sfzc3f-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: e82sfzc3f-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1cb562e351.chs8.p3.openshiftapps.com/rhtap/rhtap-qe:850c515cefd930f93a75566bccb247868ba05613@sha256:2a4de1a8eb84d1b320e80198a41cbb36317b9967613a75431439ca23eeaa77a4
+          name: container-image
